# firefly

./: .gitignore  Cargo.toml  PKGBUILD  README.md  benchmark.py
ffly-rs/: Cargo.toml  README.md
ffly-rs/examples/: crd.rs  push_it.rs  push_it_redis.rs  push_it_skytable.rs
ffly-rs/src/: lib.rs
rest/: Cargo.toml  README.md
rest/reference/: firefly-REST.yaml
rest/src/: main.rs
server/: .dockerignore  Cargo.toml  Dockerfile  README.md
server/src/: connection.rs  database.rs  main.rs  test_query.rs
src/: ascii_optimisation.rs  bitwise_query.rs  connection.rs  database.rs  main.rs  query.rs  serialisation.rs  test_ascii_optimisation.rs  test_bitwise_query.rs  test_query.rs  test_serialisation.rs
