[package]
name = "ffly-rs"
version = "0.0.5"
edition = "2021"
description = "A rust utility library for the Firefly key-value pair database."
license = "MIT"


[dependencies]
tokio = { version = "1.25.0", features = ["full"] }

[dev-dependencies]
fastrand = "1.8"
futures = "0.3"
redis = "0.22"
skytable = { version = "0.7", features = ["tokio", "aio"] }
uuid = { version = "1.1", features = ["v4"] }
