[package]
name = "ffly-rs"
version = "0.0.6"
edition = "2021"
description = "A rust utility library for the Firefly key-value pair database."
license = "MIT"


[dependencies]
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
fastrand = "2.0"
futures = "0.3"
redis = "0.23"
skytable = { version = "0.7", features = ["tokio", "aio"] }
uuid = { version = "1.4", features = ["v4"] }
