[package]
name = "ffly"
version = "0.0.3"
edition = "2021"
description = "A \"blazingly\" fast key-value pair database without bloat written in rust."
license = "MIT"
authors = ["Arthurdw <contact@arthurdw.com>"]

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
clap = { version = "4.4.3", features = ["derive"] }
log = "0.4.20"
pretty_env_logger = "0.4.0"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1.32.0", features = ["full"] }
